--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^5.1.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  fpdart: ^0.5.0
   google_fonts: ^4.0.3
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -51,7 +54,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
